@@ -11,6 +11,8 @@ Server Fixes
 
 --Fixed twin-caused crash due to ipAddress memory leak fix.
 
+--Fixed VOGP crash, if player count shrinks between invocations.
+
 
 
 Version 365    2021-October-28
